# api_crawler

./: .env  Cargo.toml  README.md  Rocket.toml  _Rocket.toml
src/: handlers.rs  main.rs  server.rs  types.rs
