[package]
name = "issues-crawler"
version = "0.1.0"
authors = ["phonnz <gonzalezm.alfonso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Change rust version
## RUSTUP OVERRID E SET NIGHTLY
# rustup show -- show version
# Rust toolchain advanced override
# Rust doc -- generate docs locally for dependencies

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"