[package]
name = "issues-crawler"
version = "0.1.0"
authors = ["phonnz <gonzalezm.alfonso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Change rust version
## RUSTUP OVERRID E SET NIGHTLY
# rustup show -- show version
# Rust toolchain advanced override
# Rust doc -- generate docs locally for dependencies

[dependencies]
rocket = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.6"

